--- a/src/components/About/AboutGallery.astro
+++ b/src/components/About/AboutGallery.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 
-const GalleryImages = await getEntryBySlug("aboutPage", "gallery");
-const { images } = GalleryImages?.data;
+const GalleryImages = await getEntry("aboutPage", "gallery");
+const { images } = GalleryImages?.data || {};
 ---
 
 <div class='section-about-gallery'>
