--- a/src/components/About/Team.astro
+++ b/src/components/About/Team.astro
@@ -1,9 +1,9 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import Header from "../ui/Heading.astro";
 import { Image } from "astro:assets";
-const TeamData = await getEntryBySlug("aboutPage", "team");
-const { header, members } = TeamData?.data;
+const TeamData = await getEntry("aboutPage", "team");
+const { header, members } = TeamData?.data || {};
 const { hideHeader } = Astro.props;
 ---
 
