--- a/src/components/Contact/ContactCards.astro
+++ b/src/components/Contact/ContactCards.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 
-const ContactDetails = await getEntryBySlug("contact", "index");
-const { cards } = ContactDetails?.data;
+const ContactDetails = await getEntry("contact", "index");
+const { cards } = ContactDetails?.data || {};
 ---
 
 <div class='section-contact-info'>
