--- a/src/components/Contact/ContactTestimonial.astro
+++ b/src/components/Contact/ContactTestimonial.astro
@@ -1,12 +1,12 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import ContactForm from "../functional/ContactForm";
 import { Image } from "astro:assets";
 const {
   data: { web3AccessKey },
-} = await getEntryBySlug("site", "meta");
-const ContactDetails = await getEntryBySlug("contact", "index");
-const { header, description, client } = ContactDetails?.data;
+} = await getEntry("site", "meta");
+const ContactDetails = await getEntry("contact", "index");
+const { header, description, client } = ContactDetails?.data || {};
 ---
 <section class='section-contact'>
     <div class='section-space-bottom'>
