--- a/src/components/Index/Brand.astro
+++ b/src/components/Index/Brand.astro
@@ -1,9 +1,9 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import SwiperComponent from "../functional/Swiper";
 
-const BrandData = await getEntryBySlug("IndexPage", "brand");
-const { title, images } = BrandData?.data;
+const BrandData = await getEntry("IndexPage", "brand");
+const { title, images } = BrandData?.data || {};
 const { marginBottom } = Astro.props;
 ---
 
