--- a/src/components/Service/Price.astro
+++ b/src/components/Service/Price.astro
@@ -1,11 +1,11 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import { getCollection } from "astro:content";
 import Heading from "../ui/Heading.astro";
 var PricingData = await getCollection("Pricing");
 PricingData = PricingData.filter((data) => data.slug.startsWith("plan-"));
-const IndexData = await getEntryBySlug("Pricing", "index");
-const { header } = IndexData?.data;
+const IndexData = await getEntry("Pricing", "index");
+const { header } = IndexData?.data || {};
 ---
 
 <section class='section-pricing'>
