--- a/src/components/Team/OtherTeam.astro
+++ b/src/components/Team/OtherTeam.astro
@@ -1,9 +1,9 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import Button from "../ui/Button.astro";
 import Heading from "../ui/Heading.astro";
 import { Image } from "astro:assets";
-const OtherTeamData = await getEntryBySlug("aboutPage", "team");
+const OtherTeamData = await getEntry("aboutPage", "team");
 const {
   data: { members, header },
 } = OtherTeamData;
