--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -8,10 +8,10 @@ import "jos-animation/dist/jos.css";
 import "@fontsource/plus-jakarta-sans/800.css";
 import "@fontsource/inter/400.css";
 import "@fortawesome/fontawesome-free/css/all.css";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 const { title } = Astro.props;
-const MetaData = await getEntryBySlug("site", "meta");
-const { siteName, description, favicon } = MetaData?.data;
+const MetaData = await getEntry("site", "meta");
+const { siteName, description, favicon } = MetaData?.data || {};
 ---
 
 <!doctype html>
