--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,10 +1,10 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import Button from "../components/ui/Button.astro";
 import Layout from "../layout/Layout.astro";
 import { Image } from "astro:assets";
-const NotFoundData = await getEntryBySlug("notFound", "index");
-const { header, description, image, button } = NotFoundData?.data;
+const NotFoundData = await getEntry("notFound", "index");
+const { header, description, image, button } = NotFoundData?.data || {};
 ---
 
 <Layout title='404-error'>
