--- a/src/pages/career/[single].astro
+++ b/src/pages/career/[single].astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import Layout from "../../layout/Layout.astro";
 import { slug } from "github-slugger";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import ContactForm from "../../components/functional/ContactForm";
 import BreadCumb from "../../components/ui/BreadCumb.astro";
 export async function getStaticPaths() {
@@ -16,13 +16,13 @@ export async function getStaticPaths() {
 }
 const {
   data: { web3AccessKey },
-} = await getEntryBySlug("site", "meta");
+} = await getEntry("site", "meta");
 const { careerSingle } = Astro.props;
 const { position, salaryRange, type, description, location } =
   careerSingle.data;
 const { Content } = await careerSingle.render();
-const ContactDetail = await getEntryBySlug("contact", "index");
-const { mail, phone, address } = ContactDetail?.data;
+const ContactDetail = await getEntry("contact", "index");
+const { mail, phone, address } = ContactDetail?.data || {};
 ---
 
 <Layout title={position}>
