--- a/src/components/About/AboutFacts.astro
+++ b/src/components/About/AboutFacts.astro
@@ -1,8 +1,8 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import Button from "../ui/Button.astro";
 
-const Facts = await getEntryBySlug("aboutPage", "facts");
+const Facts = await getEntry("aboutPage", "facts");
 const {
   header,
   button,
@@ -10,7 +10,7 @@ const {
   ActiveEngagement,
   SuccessProjects,
   AwardsWinning,
-} = Facts?.data;
+} = Facts?.data || {};
 const { Content } = await Facts.render();
 ---
 
