--- a/src/components/About/AboutHero.astro
+++ b/src/components/About/AboutHero.astro
@@ -1,11 +1,11 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import HeroImage from "../ui/HeroImage.astro";
 import { Image } from "astro:assets";
 
-const HeroData = await getEntryBySlug("aboutPage", "hero");
+const HeroData = await getEntry("aboutPage", "hero");
 const { Content } = await HeroData.render();
-const { header, blockquote, person, videoLink, img } = HeroData?.data;
+const { header, blockquote, person, videoLink, img } = HeroData?.data || {};
 ---
 
 <section class='section-about-hero'>
