--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -1,10 +1,10 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import Logo from "./Logo.astro";
 import Navigation from "./Navigation.astro";
 const {
   data: { rightButton1, rightButton2 },
-} = await getEntryBySlug("site", "header");
+} = await getEntry("site", "header");
 ---
 
 <header
