--- a/src/components/ui/Logo.astro
+++ b/src/components/ui/Logo.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 
 const { link, css, logo } = Astro.props;
-const MetaData = await getEntryBySlug("site", "meta");
+const MetaData = await getEntry("site", "meta");
 ---
 
 <a href={link} class={css}>
