--- a/src/components/ui/Navigation.astro
+++ b/src/components/ui/Navigation.astro
@@ -1,7 +1,7 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 
-const Header = await getEntryBySlug("site", "header");
+const Header = await getEntry("site", "header");
 ---
 
 <ul class='site-menu-main'>
