--- a/src/pages/terms-condition.astro
+++ b/src/pages/terms-condition.astro
@@ -1,8 +1,8 @@
 ---
-import { getEntryBySlug } from "astro:content";
+import { getEntry } from "astro:content";
 import Layout from "../layout/Layout.astro";
 import BreadCumb from "../components/ui/BreadCumb.astro";
-const TermsConditionBody = await getEntryBySlug("termsCondition", "index");
+const TermsConditionBody = await getEntry("termsCondition", "index");
 const { Content } = await TermsConditionBody.render();
 ---
 
