--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -42,22 +42,20 @@
   }
 }
 
-@keyframes rotate-360{
-  0%{
-    transform: rotate(0deg)
+@keyframes rotate-360 {
+  0% {
+    transform: rotate(0deg);
   }
 
-  100%{
-    transform: rotate(360deg)
+  100% {
+    transform: rotate(360deg);
   }
 }
 
-.rotate-360{
+.rotate-360 {
   animation: rotate-360 20s linear infinite;
 }
 
-
-input:checked~.toggle_dot {
+input:checked ~ .toggle_dot {
   transform: translateX(100%);
 }
-
