--- a/src/pages/coming-soon.astro
+++ b/src/pages/coming-soon.astro
@@ -4,10 +4,9 @@ import Layout from "../layout/Layout.astro";
 import ComingSoonForm from "../components/functional/ComingSoonForm";
 import Logo from "../components/ui/Logo.astro";
 const ComingSoonData = await getEntry("comingSoon", "index");
-const { title, form, description } = ComingSoonData.data;
-const {
-  data: { web3AccessKey },
-} = await getEntry("site", "meta");
+const { title, form, description } = ComingSoonData?.data || {};
+const siteData = await getEntry("site", "meta");
+const { web3AccessKey } = siteData?.data || {};
 ---
 
 <Layout title='Coming Soon'>
