--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -1,9 +1,12 @@
 ---
-import { getEntry } from "astro:content";
+import { getEntry, render } from "astro:content";
 import Layout from "../layout/Layout.astro";
 import BreadCumb from "../components/ui/BreadCumb.astro";
 const TermsConditionBody = await getEntry("privacyPolicy", "index");
-const { Content } = await TermsConditionBody.render();
+let Content;
+if (TermsConditionBody) {
+  ({ Content } = await render(TermsConditionBody));
+}
 ---
 
 <Layout title='Privacy Policy'>
@@ -16,7 +19,7 @@ const { Content } = await TermsConditionBody.render();
           </ul>
         </BreadCumb>
         <div style="margin: 20px;">
-          <Content />
+          {Content && <Content />}
         </div>
       </main>
 </Layout>
