--- a/src/components/Index/ContentArea1.astro
+++ b/src/components/Index/ContentArea1.astro
@@ -1,9 +1,12 @@
 ---
 import { Image } from "astro:assets";
-import { getEntry } from "astro:content";
+import { getEntry, render } from "astro:content";
 const ContentData = await getEntry("IndexPage", "content-1");
 const { header, image } = ContentData?.data || {};
-const { Content } = await ContentData.render();
+let Content;
+if (ContentData) {
+  ({ Content } = await render(ContentData));
+}
 ---
 
 <div
@@ -16,7 +19,7 @@ const { Content } = await ContentData.render();
         </h2>
       </div>
     </div>
-    <Content />
+    {Content && <Content />}
   </div>
   <div class='jos relative' data-jos_animation='fade-left'>
     <div class='rounded-[10px] bg-[#FCEDCF] p-[30px] lg:p-10 xl:p-[50px]'>
