--- a/src/components/Service/ServiceSection.astro
+++ b/src/components/Service/ServiceSection.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import ServiceCard from "../ui/ServiceCard.astro";
 var Services = await getCollection("services");
-Services = Services.filter((Service) => Service.slug.startsWith("service-"));
+Services = Services.filter((Service) => Service.id.startsWith("service-"));
 ---
 
 <div class='section-service'>
