--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -16,7 +16,7 @@ const {
   UtilityPages,
   Resources,
   socialLinks,
-} = FooterData.data;
+} = FooterData?.data || {};
 ---
 
 <footer class='section-footer'>
