--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -2,9 +2,8 @@
 import { getEntry } from "astro:content";
 import Logo from "./Logo.astro";
 import Navigation from "./Navigation.astro";
-const {
-  data: { rightButton1, rightButton2 },
-} = await getEntry("site", "header");
+const headerData = await getEntry("site", "header");
+const { rightButton1, rightButton2 } = headerData?.data || {};
 ---
 
 <header
