chore: fix footer copyright and formatting

--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -19,55 +19,55 @@ const {
 } = FooterData?.data || {};
 ---
 
-<footer class='section-footer'>
-  <div class='bg-ColorBlack'>
-    <div class='relative z-10'>
-      <div class='pb-[60px] pt-20 lg:pb-20 lg:pt-[100px] xl:pt-[120px]'>
-        <div class='container-default'>
+<footer class="section-footer">
+  <div class="bg-ColorBlack">
+    <div class="relative z-10">
+      <div class="pb-[60px] pt-20 lg:pb-20 lg:pt-[100px] xl:pt-[120px]">
+        <div class="container-default">
           <div
-            class='flex flex-wrap items-center justify-center text-center lg:text-left lg:justify-between gap-8'>
-            <div class='max-w-[400px] md:max-w-[500px] lg:max-w-[550px]'>
-              <h2 class='text-white'>{title}</h2>
+            class="flex flex-wrap items-center justify-center text-center lg:text-left lg:justify-between gap-8">
+            <div class="max-w-[400px] md:max-w-[500px] lg:max-w-[550px]">
+              <h2 class="text-white">{title}</h2>
             </div>
             <Button link={button?.link} text={button?.text} />
           </div>
         </div>
       </div>
-      <div class='absolute right-[9%] top-8 -z-10 hidden xxl:block'>
+      <div class="absolute right-[9%] top-8 -z-10 hidden xxl:block">
         <Image
-          src='/assets/img/elements/cta-1-shape-1.svg'
-          alt='cta-1-shape-1'
-          width='115'
-          height='130'
+          src="/assets/img/elements/cta-1-shape-1.svg"
+          alt="cta-1-shape-1"
+          width="115"
+          height="130"
         />
       </div>
     </div>
-    <HorizontalLine color='bg-white' />
-    <div class='text-white'>
-      <div class='py-[60px] lg:py-20'>
-        <div class='container-default'>
+    <HorizontalLine color="bg-white" />
+    <div class="text-white">
+      <div class="py-[60px] lg:py-20">
+        <div class="container-default">
           <div
-            class='grid gap-x-16 gap-y-10 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-[1fr_repeat(3,_auto)] xl:gap-x-24 xxl:gap-x-[134px]'>
-            <div class='flex flex-col gap-y-7 md:col-span-3 lg:col-span-1'>
-              <Logo link='/' logo={logo} />
+            class="grid gap-x-16 gap-y-10 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-[1fr_repeat(3,_auto)] xl:gap-x-24 xxl:gap-x-[134px]">
+            <div class="flex flex-col gap-y-7 md:col-span-3 lg:col-span-1">
+              <Logo link="/" logo={logo} />
               <div>
-                <div class='lg:max-w-[416px]'>
+                <div class="lg:max-w-[416px]">
                   {description}
                 </div>
                 <a
-                  href='mailto:yourdemo@email.com'
-                  class='my-6 block underline-offset-4 transition-all duration-300 hover:underline'
+                  href="mailto:yourdemo@email.com"
+                  class="my-6 block underline-offset-4 transition-all duration-300 hover:underline"
                   >{mail}</a
                 >
-                <div class='flex flex-wrap gap-5'>
+                <div class="flex flex-wrap gap-5">
                   {
                     socialLinks.map((socialLink: any) => (
                       <a
                         href={socialLink?.link}
-                        target='_blank'
-                        rel='noopener noreferrer'
-                        class='flex h-[30px] w-[30px] items-center justify-center rounded-[50%] bg-white bg-opacity-5 text-sm text-white transition-all duration-300 hover:bg-ColorBlue'
-                        aria-label='icon'>
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        class="flex h-[30px] w-[30px] items-center justify-center rounded-[50%] bg-white bg-opacity-5 text-sm text-white transition-all duration-300 hover:bg-ColorBlue"
+                        aria-label="icon">
                         <i class={`fa-brands ${socialLink?.icon}`} />
                       </a>
                     ))
@@ -75,23 +75,23 @@ const {
                 </div>
               </div>
             </div>
-            <div class='flex flex-col gap-y-7 md:col-span-1 lg:col-span-1'>
-              <div class='text-xl font-semibold capitalize'>Primary Pages</div>
-              <ul class='flex flex-col gap-y-[10px] capitalize'>
+            <div class="flex flex-col gap-y-7 md:col-span-1 lg:col-span-1">
+              <div class="text-xl font-semibold capitalize">Primary Pages</div>
+              <ul class="flex flex-col gap-y-[10px] capitalize">
                 <FooterPages data={PrimaryPages} />
               </ul>
             </div>
-            <div class='flex flex-col gap-y-6 md:col-span-1 lg:col-span-1'>
-              <div class='text-xl font-semibold capitalize'>Utility pages</div>
+            <div class="flex flex-col gap-y-6 md:col-span-1 lg:col-span-1">
+              <div class="text-xl font-semibold capitalize">Utility pages</div>
 
-              <ul class='flex flex-col gap-y-[10px] capitalize'>
+              <ul class="flex flex-col gap-y-[10px] capitalize">
                 <FooterPages data={UtilityPages} />
               </ul>
             </div>
-            <div class='flex flex-col gap-y-6 md:col-span-1 lg:col-span-1'>
-              <div class='text-xl font-semibold capitalize'>Resources</div>
+            <div class="flex flex-col gap-y-6 md:col-span-1 lg:col-span-1">
+              <div class="text-xl font-semibold capitalize">Resources</div>
 
-              <ul class='flex flex-col gap-y-[10px] capitalize'>
+              <ul class="flex flex-col gap-y-[10px] capitalize">
                 <FooterPages data={Resources} />
               </ul>
             </div>
@@ -100,12 +100,12 @@ const {
       </div>
     </div>
 
-    <div class='bg-white bg-opacity-5'>
-      <div class='py-[18px]'>
-        <div class='container-default'>
-          <div class='text-center text-white text-opacity-80'>
+    <div class="bg-white bg-opacity-5">
+      <div class="py-[18px]">
+        <div class="container-default">
+          <div class="text-center text-white text-opacity-80">
             &copy; Copyright {new Date().getFullYear()}, All Rights Reserved by
-            ElevateMinds
+            Mediwave
           </div>
         </div>
       </div>
